Update composer.json and README.md

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "wwtg99/html_component",
-  "homepage": "https://github.com/wwtg99/Flight2wwu",
+  "homepage": "https://github.com/wwtg99/html_component",
   "license": "MIT",
   "authors": [
     {
       "name": "Wentao Wu",
       "email": "wwtg99@gmail.com",
-      "homepage": "https://github.com/wwtg99/Flight2wwu",
+      "homepage": "https://github.com/wwtg99/html_component",
       "role": "Original Developer"
     }
   ],
